--- a/apps/core/static/core/css/saeid.css
+++ b/apps/core/static/core/css/saeid.css
@@ -51,6 +51,7 @@
     box-shadow: inset 0 0 0 50px #2A99CE;
     padding: 0.5rem 0.5rem;
 }
+
 .social-icon-inst {
     color: white;
     font-size: 1.2rem;
@@ -59,6 +60,7 @@
     box-shadow: inset 0 0 0 50px #C635AE;
     padding: 0.5rem 0.5rem;
 }
+
 .social-icon-green {
     color: white;
     font-size: 1.2rem;
@@ -85,15 +87,28 @@ img {
 }
 
 .over_flow::-webkit-scrollbar {
-  display: block;
+    display: block;
 }
+
 .s-footer a {
     text-decoration: none;
 }
+
 .s-footer img {
     width: 70%;
     max-height: 100px !important;
 }
-.content-div{
+
+.content-div {
     min-height: 70vh;
+}
+
+.image-text-overlay {
+    color: #eee;
+    background-color: #000000cf;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 }
