--- a/apps/store/templates/store/service_slug.html
+++ b/apps/store/templates/store/service_slug.html
@@ -21,11 +21,24 @@
                 {% if  is_owner %}
 
                 {% else %}
-                    <div class="btn-group buy" role="group">
-                        <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;" disabled><i
-                                class="fas fa-hand-pointer"></i></button>
-                        <button type="button" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>
-                    </div>
+{#                    <div class="btn-group buy" role="group">#}
+                        <form class="btn-group buy" autocomplete="off" method="post" action="{% url 'store:cart' %}">
+                            {% csrf_token %}
+                            <input type="text" name="product" value="{{ object.pk }}" hidden>
+                            <input type="text" name="request_type" value="inc" hidden>
+                            <input type="number" name="quantity" value="1" hidden>
+                            {#                            <input type="submit" class="btn btn-primary" value="اضافه به سبد خرید">#}
+                            <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;"
+                                    disabled><i
+                                    class="fas fa-hand-pointer"></i></button>
+                            <button type="submit" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>
+                        </form>
+
+
+{#                        <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;" disabled><i#}
+{#                                class="fas fa-hand-pointer"></i></button>#}
+{#                        <button type="button" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>#}
+{#                    </div>#}
                 {% endif %}
             </div>
         </div>
@@ -40,7 +53,8 @@
             {% for product  in same_product %}
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
-                        <img class="card-img-to" src="{{ product.picture.url }}" alt="{{ product.picture.description }}">
+                        <img class="card-img-to" src="{{ product.picture.url }}"
+                             alt="{{ product.picture.description }}">
                         <div class="card-body">
                             <div class="service-name">
                                 <h1>{{ product.title }}</h1>
