--- a/apps/store/templates/store/service_slug.html
+++ b/apps/store/templates/store/service_slug.html
@@ -18,14 +18,14 @@
                 <p>
                     {{ object.introduction }}
                 </p>
-                {% if  is_owner %}
+{#                {% if  is_owner %}#}
 
-                {% else %}
+{#                {% else %}#}
 {#                    <div class="btn-group buy" role="group">#}
                         <form class="btn-group buy" autocomplete="off" method="post" action="{% url 'store:cart' %}">
                             {% csrf_token %}
                             <input type="text" name="product" value="{{ object.pk }}" hidden>
-                            <input type="text" name="request_type" value="inc" hidden>
+                            <input type="text" name="request_type" value="add" hidden>
                             <input type="number" name="quantity" value="1" hidden>
                             {#                            <input type="submit" class="btn btn-primary" value="اضافه به سبد خرید">#}
                             <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;"
@@ -39,7 +39,7 @@
 {#                                class="fas fa-hand-pointer"></i></button>#}
 {#                        <button type="button" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>#}
 {#                    </div>#}
-                {% endif %}
+{#                {% endif %}#}
             </div>
         </div>
         <div class="row wide2 over_flow">
