--- a/apps/store/templates/store/learning_slug.html
+++ b/apps/store/templates/store/learning_slug.html
@@ -1,44 +1,97 @@
 {% extends "core/base.html" %}
+{% load jformat %}
 {% load i18n %}
 
 {% block content %}
-    <div id="page-top" class="wide">
-        <!-- Single Service Item ////////// Just this Section is changed! -->
-        {% if not is_user_owner %}
+    <!-- Single Service Item ////////// Just this Section is changed! -->
+    {% if not is_user_owner %}
+        <!-- mobile View -->
+        <div id="page-top" class="wide d-block d-md-none">
+            <div class="post-item">
+
+                <div class="post-name">
+                    <h1> {{ object.title }}</h1>
+                    <strong class="post-date">{{ object.pub_date|jformat:'%Y/%m/%d' }}</strong>
+
+                </div>
+                <img class="img-fluid" src="{{ object.picture.url }}" alt="">
+
+                <hr>
+                {{ object.introduction | safe }}
+                <form class="btn-group buy" autocomplete="off" method="post" action="{% url 'store:cart' %}">
+                    {% csrf_token %}
+                    <input type="text" name="product" value="{{ object.pk }}" hidden>
+                    <input type="text" name="request_type" value="add" hidden>
+                    <input type="number" name="quantity" value="1" hidden>
+                    {#                            <input type="submit" class="btn btn-primary" value="اضافه به سبد خرید">#}
+                    <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;"
+                            disabled><i
+                            class="fas fa-hand-pointer"></i></button>
+                    <button type="submit" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>
+                </form>
+            </div>
+        </div>
+
+        <div id="page-top" class="wide d-none d-md-block">
             <!-- Single Service Item ////////// Just this Section is changed! -->
             <div style="float: left ; padding: 1vw;">
                 <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">
             </div>
-            <div class="post-item mt-3">
+            <div class="post-item">
                 <div class="post-name">
                     <h1> {{ object.title }}</h1>
                     <strong class="post-date">01.01.1401</strong>
                 </div>
                 <hr>
-                {{ object.introduction |safe }}
+                {{ object.introduction | safe }}
+                <form class="btn-group buy" autocomplete="off" method="post" action="{% url 'store:cart' %}">
+                    {% csrf_token %}
+                    <input type="text" name="product" value="{{ object.pk }}" hidden>
+                    <input type="text" name="request_type" value="add" hidden>
+                    <input type="number" name="quantity" value="1" hidden>
+                    {#                            <input type="submit" class="btn btn-primary" value="اضافه به سبد خرید">#}
+                    <button type="button" class="btn btn-primary btn-icon" style="pointer-events: none;"
+                            disabled><i
+                            class="fas fa-hand-pointer"></i></button>
+                    <button type="submit" class="btn btn-outline-primary btn-text">افزودن به سبد خرید</button>
+                </form>
+            </div>
+        </div>
+        <!-- Single Service Item ////////// Just this Section is changed! -->
+        {#            <div style="float: left ; padding: 1vw;">#}
+        {#                <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">#}
+        {#            </div>#}
+        {#            <div class="post-item mt-3">#}
+        {#                <div class="post-name">#}
+        {#                    <h1> {{ object.title }}</h1>#}
+        {#                    <strong class="post-date">01.01.1401</strong>#}
+        {#                </div>#}
+        {#                <hr>#}
+        {#                {{ object.introduction |safe }}#}
+        {#               #}
+        {#            </div>#}
+
+    {% elif request_successful and is_user_owner %}
+        <div class="post-item">
+            <h1>{{ object.title }}</h1>
+            <strong class="post-date">01.01.1401</strong>
+            <hr>
+            <div class="ratio ratio-16x9">
+                <iframe src="{{ video_url }}" title="Learning video" allowfullscreen></iframe>
+            </div>
+            <div class="my-3">
+                {{ object.content| safe }}
             </div>
 
-        {% elif request_successful and is_user_owner %}
-            <div class="post-item">
-                <h1>{{ object.title }}</h1>
-                <strong class="post-date">01.01.1401</strong>
-                <hr>
-                <div class="ratio ratio-16x9">
-                    <iframe src="{{ video_url }}" title="Learning video" allowfullscreen></iframe>
-                </div>
-                <div class="my-3">
-                    {{ object.content| safe }}
-                </div>
-
-            </div>
-            <div class="my-5">
-                {% if object.attachment %}
-                    <a href="{% url "store:learning_attachment" object.slug %}">مطلب پیوست</a>
-                {% endif %}
-            </div>
-        {% else %}
-            <h1>
-                {% trans "error in video server" %}
-            </h1>
-        {% endif %}
+        </div>
+        <div class="my-5">
+            {% if object.attachment %}
+                <a href="{% url "store:learning_attachment" object.slug %}">مطلب پیوست</a>
+            {% endif %}
+        </div>
+    {% else %}
+        <h1>
+            {% trans "error in video server" %}
+        </h1>
+    {% endif %}
 {% endblock %}
