Add title tag to all pages

--- a/apps/account/templates/account/profile.html
+++ b/apps/account/templates/account/profile.html
@@ -1,6 +1,8 @@
 {% extends 'core/base.html' %}
 {% load i18n %}
-
+{% block title %}
+     پروتال
+{% endblock title %}
 {% block content %}
     <div id="page-top" class="wide">
         <div id="change_password">
