--- a/apps/core/templates/core/about_us.html
+++ b/apps/core/templates/core/about_us.html
@@ -1,6 +1,10 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+
+{% block title %}
+    درباره ما
+{% endblock title %}
 {% block content %}
     <div id="page-top" class="wide">
         <!-- Single Service Item ////////// Just this Section is changed! -->
