--- a/apps/store/templates/store/category.html
+++ b/apps/store/templates/store/category.html
@@ -1,6 +1,10 @@
 {% extends "core/base.html" %}
 {% load jformat %}
 
+{% block title %}
+    دسته بندی
+{% endblock title %}
+
 {% block content %}
     <div id="" class="wide">
         <div class="filter ">
