--- a/apps/store/templates/store/event_slug.html
+++ b/apps/store/templates/store/event_slug.html
@@ -2,6 +2,9 @@
 {% load jformat %}
 
 {% block title %}
+    رویداد
+{% endblock title %}
+{% block title %}
 {% endblock title %}
 {% block content %}
     <div id="page-top" class="wide">
