--- a/apps/store/templates/store/index.html
+++ b/apps/store/templates/store/index.html
@@ -1,6 +1,11 @@
 {% extends "core/base.html" %}
 {% load jformat %}
 
+
+{% block title %}
+    آراد مهاجر
+{% endblock title %}
+
 {% block content %}
     <div id="" class="wide">
         <div class="filter ">
