--- a/apps/store/templates/store/learning_slug.html
+++ b/apps/store/templates/store/learning_slug.html
@@ -2,6 +2,9 @@
 {% load jformat %}
 {% load i18n %}
 
+{% block title %}
+    آموزش
+{% endblock title %}
 {% block content %}
     <!-- Single Service Item ////////// Just this Section is changed! -->
     {% if not is_user_owner %}
