--- a/apps/store/templates/store/order.html
+++ b/apps/store/templates/store/order.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 
 
+{% block title %}
+    سفارش
+{% endblock title %}
+
 {% block content %}
     <div id="page-top" class="wide">
         <div id="user">
