--- a/apps/account/templates/account/login.html
+++ b/apps/account/templates/account/login.html
@@ -1,6 +1,9 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+{% block title %}
+     ورود به پورتال
+{% endblock title %}
 {% block content %}
     {% if form.errors %}
         {% for error in form.non_field_errors %}
