--- a/apps/account/templates/account/signup.html
+++ b/apps/account/templates/account/signup.html
@@ -1,6 +1,9 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+{% block title %}
+     ثبت نام
+{% endblock title %}
 {% block content %}
     <div id="page-top" class="wide">
         <!-- Single Service Item ////////// Just this Section is changed! -->
