--- a/apps/blog/templates/blog/category.html
+++ b/apps/blog/templates/blog/category.html
@@ -1,7 +1,9 @@
 {% extends "core/base.html" %}
 {% load jformat %}
 
-
+{% block title %}
+    وبلاگ
+{% endblock title %}
 
 {% block content %}
     <div id="" class="wide">
