--- a/apps/contact_us/templates/contact_us/thanks.html
+++ b/apps/contact_us/templates/contact_us/thanks.html
@@ -1,6 +1,11 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+
+{% block title %}
+    ارتباط با ما
+{% endblock title %}
+
 {% block content %}
     <div id="page-top" class="wide">
         <!-- Single Service Item ////////// Just this Section is changed! -->
