--- a/apps/core/templates/404.html
+++ b/apps/core/templates/404.html
@@ -1,6 +1,10 @@
 {% extends "core/base.html" %}
 
 
+{% block title %}
+    404
+{% endblock title %}
+
 {% block content %}
     <div id="page-top" class="wide">
         <div id="user">
