--- a/apps/store/templates/store/cart.html
+++ b/apps/store/templates/store/cart.html
@@ -2,6 +2,9 @@
 {% load humanize %}
 {% load i18n %}
 
+{% block title %}
+    سبد خرید
+{% endblock title %}
 
 {% block content %}
     <div id="page-top" class="wide">
