--- a/apps/store/templates/store/service_slug.html
+++ b/apps/store/templates/store/service_slug.html
@@ -2,6 +2,10 @@
 {% load i18n %}
 {% load static %}
 
+{% block title %}
+    سرویس
+{% endblock title %}
+
 {% block content %}
     <div class="service-item">
         <div class="row wide">
