Add title description tag

--- a/apps/blog/templates/blog/slug.html
+++ b/apps/blog/templates/blog/slug.html
@@ -5,6 +5,9 @@
 {% block title %}
     {{ object.title }}
 {% endblock title %}
+{% block description %}
+    {{ object.seo_tag }}
+{% endblock description %}
 
 {% block content %}
     <!-- mobile View -->
