--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -52,6 +52,12 @@
             آراد مهاجر
         {% endblock title %}
     </title>
+    <meta name="description" content="
+    {% block description %}
+    آراد مهاجر وب سایت مهاجرت
+    {% endblock description %}
+"
+    />
 </head>
 
 <body>
